--- a/raxdegDotComProject/dragonchosen/templates/home.html
+++ b/raxdegDotComProject/dragonchosen/templates/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THE DRAGONCHOSEN</title>
+    <title>The Dragonchosen</title>
     <!-- BOOTSTRAP  -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- FAVICON for dragon icon -->
@@ -15,20 +15,30 @@
 </head>
 <body>
     <div class="container bg-light p-5" id="wrapper">
-        
-        <div class="p-2 mb-3 bg-light bg-gradient d-flex justify-content-between align-items-center border border-left-0 border-top-0 border-right-0 border-primary rounded shadow" id="nav">
-            <img src="{% static 'img\dragonchosenLogo2.png' %}" alt="Cult of the Dragon Logo" class="rounded-circle mr-1">
+
+        <div class="p-2 mb-3 bg-purple d-flex justify-content-between align-items-center border border-left-0 border-top-0 border-right-0 border-primary rounded shadow">
+            <img src="{% static 'img\dragonchosenLogo2.png' %}" alt="Cult of the Dragon Logo" class="rounded-circle mr-1" id="logo">
             <a href="{% url 'home' %}" class="btn btn-primary mr-1" id="home">Home</a>
             <a href="#" class="btn btn-outline-primary btn-purple mr-1">Campaign</a>
             <!-- LOGIN BUTTON  -->
-            {% if user in request.session %}
-            <a href="#" class="btn btn-outline-primary btn-purple mr-auto shadow">Logout</a>
-            <h3 class="text-primary pr-2">Welcome Dragonchosen {{user.firstName}}!</h3>
-            {% else %}
-            <a href="#" class="btn btn-outline-primary btn-purple mr-auto shadow">Login</a>
+            {% if 'userId' not in request.session %}
+            <a href="{% url 'login' %}" class="btn btn-outline-primary btn-purple mr-auto shadow">Login</a>
             <h3 class="text-primary pr-2">Welcome to the Dragonchosen Campaign!</h3>
+            {% else %}
+            <a href="#" class="btn btn-outline-primary btn-purple mr-1 shadow">Heroes</a>
+            <a href="{% url 'editUser' %}" class="btn btn-outline-primary btn-purple mr-1 shadow">My Info</a>
+            <a href="{% url 'logout' %}" class="btn btn-outline-primary btn-purple mr-auto shadow">Logout</a>
+            <h3 class="text-primary pr-2">Welcome Dragonchosen {{user.firstName}}!</h3>
             {% endif %}
         </div>
+
+        {% if messages %}
+            <ul class="messages mt-5">    
+                {% for message in messages %}    
+                    <li class="font-weight-bold text-primary">{{ message }}</li>    
+                {% endfor %}
+            </ul>
+        {% endif %}
 
         <h5 class="font-weight-bold">Welcome to <a href="#" class="text-primary font-weight-bold">Ghallant</a></h5>
         <p class="font-weight-bold">A World where enemies lurk behind every corner and shadows hold knives around every bend.</p>
@@ -37,8 +47,8 @@
         <p class="font-weight-bold">It has only been recenly, through a series of events that began in the small town of <a class="text-primary font-weight-bold" href="#">Zidurza</a> that an unlikely group of <a class="text-primary font-weight-bold" href="#">Heroes</a> have risen to meet the cult on various occasions. Now, with justice at their side, they have been chosen by Dragons to help bring about peace and balance to the world. Not many people ride dragons since the days of old. Awestruck, the people of <a class="text-primary font-weight-bold" href="#">Starfall City</a> watch this band of heroes grow in strength and influence as they venture to bringing about peace to the world.</p>
         <p class="font-weight-bold">If they cannot bring peace, many fear that, no one could... </p>
         <p class="font-weight-bold">What horrible machinations has the Cult of the Dragon for these blasphemers who taint dragons in their eyes?</p>
-        <p class="font-weight-bold">What has the Cult in store for... <span class="purple">THE DRAGONCHOSEN</span></p>
-        <img src="{% static 'img\tiamat4.jpg' %}" alt="Tiamat, the Queen of Dragons" id="tiamat">
+        <p class="font-weight-bold">What has the Cult in store for... <span class="text-purple">THE DRAGONCHOSEN</span></p>
+        <img src="{% static 'img\tiamat4.jpg' %}" alt="Tiamat, the Queen of Dragons" class="fit-img">
 
     </div>
 </body>
