--- a/raxdegDotComProject/dragonchosen/static/css/style.css
+++ b/raxdegDotComProject/dragonchosen/static/css/style.css
@@ -34,6 +34,20 @@ body {
 .shadow-blue {
     text-shadow: 1px 1px 2px #0d6efd;
 }
+.text-stretch {
+    width: 100%;
+}
+
+.text-stretch a {
+    text-decoration: none ;
+    color: #fff;
+}
+
+.text-stretch a:hover {
+    color:#23ad2a;
+    text-decoration:none;
+    cursor:pointer;
+}
 
 .no-decor {
     list-style: none;
@@ -47,17 +61,44 @@ h5 {
 .fit-img {
     width: 100%;
 }
+.thumbnail img {
+    height: 200px;
+    width: 200px;
+}
+.img-thumbnail {
+    width: 100%;
+    height: 300px;
+}
 
+@media (max-width: 1199px) {
+    .thumbnail img {height: 165px; width: 165px;}
+    .img-thumbnail img {height: 267px;}
+}
 @media (max-width: 991px) {
-    h3{font-size: 16px;}
-    .btn{font-size: 12px;}
+    h1{font-size: 20px;}
+    h3, .dropdown-menu label, .dropdown-menu a, .h5 {font-size: 16px;}
+    .btn {font-size: 12px;}
+    #logo{width: 75px; height: 75px;}
+    #home {margin-left: 80px;}
+    .thumbnail img {height: 125px; width: 125px;}
+    .img-thumbnail {height: 188px;}
 }
 @media (max-width: 767px) {
-    h3{font-size: 11px;}
-    .btn{font-size: 8px;}
+    h1{font-size: 15px;}
+    h3, .dropdown-menu label, .dropdown-menu a, .h5 {font-size: 11px;}
+    .btn {font-size: 8px;}
+    #logo{width: 50px; height: 50px;}
+    #home {margin-left: 55px;}
+    .thumbnail img {height: 100px; width: 100px;}
+    .img-thumbnail {height: 127px;}
 }
 @media (max-width: 480px) {
-    h3{font-size: 8.5px;}
+    h1{font-size: 13.5px;}
+    h3, .dropdown-menu label, .dropdown-menu a, .h5 {font-size: 8.5px;}
     .btn{font-size: 7.5px;}
+    #logo{width: 35px; height: 35px;}
+    #home {margin-left: 40px;}
+    .thumbnail img {height: 75px; width: 75px;}
+    .img-thumbnail {height: 106px;}
 }
 
